tests/lean/termination_by_vars.lean.expected.out
termination_by_vars.lean:14:2-14:23: error: The function definition has no extra parameters, so `termination_by` should not bind any. Variables bound in the function header can be referred directly.
termination_by_vars.lean:23:2-23:21: error: no extra parameters bounds, please omit the `=>`
termination_by_vars.lean:27:2-27:18: error: The function definition has 2 extra parameters. These need to be bound here (`termination_by x1 ... xn =>`).
termination_by_vars.lean:31:2-31:23: error: The function definition has 2 extra paramters, but 1 variables are bound here. Bind exactly 2 variables here!
termination_by_vars.lean:45:2-45:23: error: The function definition has no extra parameters, so `termination_by` should not bind any. Variables bound in the function header can be referred directly.
termination_by_vars.lean:54:2-54:21: error: no extra parameters bounds, please omit the `=>`
termination_by_vars.lean:59:2-59:18: error: The function definition has 2 extra parameters. These need to be bound here (`termination_by x1 ... xn =>`).
termination_by_vars.lean:64:2-64:23: error: The function definition has 2 extra paramters, but 1 variables are bound here. Bind exactly 2 variables here!
termination_by_vars.lean:79:4-79:25: error: The function definition has no extra parameters, so `termination_by` should not bind any. Variables bound in the function header can be referred directly.
termination_by_vars.lean:91:4-91:23: error: no extra parameters bounds, please omit the `=>`
termination_by_vars.lean:98:4-98:20: error: The function definition has 2 extra parameters. These need to be bound here (`termination_by x1 ... xn =>`).
termination_by_vars.lean:105:4-105:25: error: The function definition has 2 extra paramters, but 1 variables are bound here. Bind exactly 2 variables here!
